# text-summar-project

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  aws_deployment.md  examples.md  flan_t5_project_plan.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: deploy.yml
design_workflows/: 01_system_overview.md  02_training_pipeline.md  03_inference_api.md  04_cicd_deployment.md
inference/: Dockerfile  Dockerfile.cpu  app.py  logger.py  model.py
notebooks/: 01_dataset_exploration.ipynb  02_tokenization_explained.ipynb  03_training_demo.ipynb  04_inference_demo.ipynb  05_api_walkthrough.ipynb
tests/: test_inference.py
training/: dataset.py  evaluate.py  push_to_hub.py  train.py
