[project]
name = "text-summar-project"
version = "0.1.0"
description = "Flan-T5 text summarization — fine-tuning + FastAPI deployment"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # Training
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "datasets>=4.6.0",
    "evaluate>=0.4.6",
    "rouge_score>=0.1.2",
    "accelerate>=1.12.0",
    "huggingface_hub>=1.4.1",
    # Inference API
    "fastapi>=0.133.1",
    "uvicorn[standard]>=0.41.0",
    "pydantic>=2.12.5",
    # Observability
    "weave>=0.52.28",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["inference", "training"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (require model download); run with: pytest -m slow",
]
